Changed the way the Expenses title and the Available label loaded when time span is altered. Fixed the bug, when deleteId wasn't passed to the Action. Optimised code in some places.

--- a/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Create.cshtml
@@ -4,7 +4,7 @@
 
 @model ExpensesControlApp.Models.ExpenseEntry
 <div class="container col-10">
-    <form id="form" method="post">
+    <form id="form" class="validate-form" method="post">
         <div class="border p-3 form-group">
             <div class="row">
                 <h2 class="text-black-50 pl-3">Add Expense</h2>
