--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -5,7 +5,7 @@
 
 @model ExpensesControlApp.ViewModels.LimitParam
 <div class="container col-10">
-    <form id="form" method="post" asp-action="Save">
+    <form id="form" class="validate-form" method="post" asp-action="Save">
         <div class="border p-3 form-group">
             <div class="row">
                 <h2 class="text-black-50 pl-3">Set Limit</h2>
