--- a/ExpensesControlApp/Views/RegularExpense/Create.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Create.cshtml
@@ -5,7 +5,7 @@
 
 @model ExpensesControlApp.ViewModels.RegExpViewModel
 <div class="container col-10">
-    <form id="form" method="post">
+    <form id="form" class="validate-form" method="post">
         <div class="border p-3 form-group">
             <div class="row">
                 <h2 class="text-black-50 pl-3">Add Regular Expense</h2>
