--- a/ExpensesControlApp/Views/Shared/_ExpenseInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_ExpenseInput.cshtml
@@ -4,13 +4,12 @@
         <span class="input-group-text w-100" id="addon-name">Name</span>
     </div>
     <input asp-for="ExpenseName" name="ExpenseName" class="form-control" aria-describedby="addon-name">
-    <span asp-validation-for="ExpenseName" class="text-danger"></span>
-
 </div>
+<label for="ExpenseName" class="validation_error_message text-danger"></label>
 <div class="input-group">
     <div class="input-group-prepend w-25">
         <span class="input-group-text w-100" id="addon-amount">Amount</span>
     </div>
     <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount">
-    <span asp-validation-for="Amount" class="text-danger"></span>
 </div>
+<label for="Amount" class="validation_error_message text-danger"></label>
