--- a/ExpensesControlApp/Views/Shared/_TimeSpanInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_TimeSpanInput.cshtml
@@ -11,5 +11,5 @@
         <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
         <input type="radio" name="TimeSpan" class="btn-check" value="1" id="time-option2" autocomplete="off">
         <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
-
     </div>
+    <label for="TimeSpan" class="validation_error_message text-danger"></label>
