--- a/ExpensesControlApp/Views/LimitParam/Index.cshtml
+++ b/ExpensesControlApp/Views/LimitParam/Index.cshtml
@@ -5,7 +5,7 @@
 
 @model ExpensesControlApp.ViewModels.LimitParam
 <div class="container col-10">
-    <form id="form" class="validate-form" method="post" asp-action="Save">
+    <form id="form" class="validate-form" method="post" asp-action="Index">
         <div class="border p-3 form-group">
             <div class="row">
                 <h2 class="text-black-50 pl-3">Set Limit</h2>
@@ -19,11 +19,23 @@
                             </div>
                             <input asp-for="Amount" name="Amount" class="form-control" aria-describedby="addon-amount">
                         </div>
-                         <label for="Amount" class="validation_error_message text-danger"></label>
+                        <span asp-validation-for="Amount" class="text-danger"></span>
+                        <label for="Amount" class="validation_error_message text-danger"></label>
                         @{
                             TempData["TimeSpanInputValue"] = (int)Model.TimeSpan;
                         }
-                        <partial name="_TimeSpanInput" for="TimeSpan" />
+                        <div class="input-group">
+                            <div class="input-group-prepend w-25">
+                                <span class="input-group-text w-100" id="addon-timespan">Span</span>
+                            </div>
+
+                            <input type="radio" asp-for="TimeSpan" name="TimeSpan" class="btn-check" value="0" id="time-option1" autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
+                            <input type="radio" asp-for="TimeSpan" name="TimeSpan" class="btn-check" value="1" id="time-option2" autocomplete="off">
+                            <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
+                        </div>
+                        <span asp-validation-for="TimeSpan" class="text-danger"></span>
+                        <label for="TimeSpan" class="validation_error_message text-danger"></label>
                     </div>
                     <div class="col">
                         <input id="submit" type="submit" class="btn btn-outline-success m-2" value="Save" />
