--- a/ExpensesControlApp/Views/RegularExpense/Index.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Regular Expenses";
 }
 
-@model  IEnumerable<ExpensesControlApp.ViewModels.RegExpViewModel>
+@model  IEnumerable<ExpensesControlApp.ViewModels.RegularExpenseVM>
 <div class="container col-10">
     
     <div class="row pt-4">
@@ -50,7 +50,7 @@
 
                     <tr>
                         <td class="col-3">@regExpense.ExpenseName</td>
-                        <td class="col-3">@regExpense.Amount.ToString("N")</td>
+                        <td class="col-3">@regExpense.Amount?.ToString("N")</td>
                         <td class="col-3">@regExpense.TimeSpan</td>
                         <td class="col-3">
                             <div class="w-100 btn-group" role="group">
