CLeaned up the code throughout all classes. Created Helper classes for the ViewModels

--- a/ExpensesControlApp/Views/ExpenseManager/Index.cshtml
+++ b/ExpensesControlApp/Views/ExpenseManager/Index.cshtml
@@ -15,8 +15,8 @@
     <div class="row pt-4">
         <div class="col-6">
             <form id="form" asp-action="Index">
-                <input id="sort-input" name="sortOrder" hidden />
-                <input id="time-input" name="timeSpan" hidden />
+                <input id="sort-input" name="sortInput" hidden />
+                <input id="time-input" name="timeInput" hidden />
                 <div class="dropdown">
                     <button class="btn btn-outline-dark dropdown-toggle" type="button" id="dropdownMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Time Span
