--- a/ExpensesControlApp/Views/RegularExpense/Index.cshtml
+++ b/ExpensesControlApp/Views/RegularExpense/Index.cshtml
@@ -14,7 +14,7 @@
     <div class="row pt-4">
         <div class="col-6">
             <form id="form" asp-action="Index">
-                <input id="sort-input" name="sortOrder" hidden />
+                <input id="sort-input" name="sortInput" value="name" hidden />
             </form>
         </div>
         <div class="col-6 text-end">
