--- a/ExpensesControlApp/Views/Shared/_RegularExpenseVMInput.cshtml
+++ b/ExpensesControlApp/Views/Shared/_RegularExpenseVMInput.cshtml
@@ -22,9 +22,9 @@
     </div>
 
     <input type="radio" asp-for="TimeSpan" name="TimeSpan" class="btn-check" value="0" id="time-option1" autocomplete="off" >
-    <label class="btn btn-outline-secondary" for="time-option1">@TimeOption.Weekly</label>
+    <label class="btn btn-outline-secondary" for="time-option1">@TimeSpanOption.Weekly</label>
     <input type="radio" asp-for="TimeSpan" name="TimeSpan" class="btn-check" value="1" id="time-option2" autocomplete="off">
-    <label class="btn btn-outline-secondary" for="time-option2">@TimeOption.Monthly</label>
+    <label class="btn btn-outline-secondary" for="time-option2">@TimeSpanOption.Monthly</label>
 </div>
 <span asp-validation-for="TimeSpan" class="text-danger"></span>
 <label for="TimeSpan" class="validation_error_message text-danger"></label>
